<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/edit_email"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:layout_gravity="center" android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_change_building"
        android:id="@+id/textView6" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerBuilding" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inputHavePlaceDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_description"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLength="300"
            android:singleLine="false" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel_button"
            android:layout_weight="0.5"
            android:textColor="@color/white"
            android:background="@drawable/button_selector_primary"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:id="@+id/accept_button"
            android:layout_weight="0.5"
            android:textColor="@color/white"
            android:background="@drawable/button_selector_primary"
            android:layout_margin="5dp" />

    </LinearLayout>
</LinearLayout>